# synthkit

./: .gitignore  README.md  VERSION0_PLAN.md  VERSION1_PLAN.md  pyproject.toml
.github/workflows/: release-artifacts.yml  unit-tests.yml
examples/: gradio_demo.py  rag_validation_example.py  tabular_example.py  text_augmentation_example.py
notebooks/: quality_validation.ipynb
synthkit/: __init__.py  __main__.py  config.py
synthkit/benchmark/: __init__.py  runner.py
synthkit/pipelines/: rag_validation.py  tabular.py  text_augmentation.py
synthkit/providers/: anthropic.py  base.py  huggingface.py  mock.py  openai.py  remote.py
synthkit/quality/: __init__.py  scorer.py
tests/: test_benchmark.py  test_new_providers.py  test_pipelines.py  test_providers.py  test_quality.py
