[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthkit"
version = "0.1.0"
description = "Lightweight synthetic data toolkit (HF-first)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
hf = ["huggingface_hub>=0.23.0"]
ui = ["gradio>=4.0.0"]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["synthkit*"]
